# RustAdmin

./: .env.example  Cargo.toml
.github/workflows/: ci.yml  sync-runner.yml
docs/: API.md
src/: db.rs  lib.rs  main.rs
src/config/: env.rs  fe_templates.rs  mod.rs  themes.rs
src/errors/: mod.rs
src/guards/: current_user.rs
src/helpers/: mod.rs  response.rs  view.rs
src/migrations/: m0001_create_users.rs  m0002_create_roles.rs  m0003_create_permissions.rs  m0004_create_users_roles.rs  m0005_create_roles_permissions.rs  m0006_create_settings.rs  m0007_seed_admin.rs  m0008_add_missing_columns.rs  mod.rs
src/modules/: mod.rs
src/modules/access/: mod.rs
src/modules/access/models/: role.rs
src/modules/access/routes/: api.rs  web.rs
src/modules/access/services/: mod.rs  permission_service.rs  role_service.rs  user_service.rs
src/modules/access/validators/: mod.rs  role.rs  user.rs
src/modules/auth/: service.rs
src/modules/auth/routes/: api.rs  mod.rs  web.rs
src/modules/dashboard/: controllers.rs
src/modules/home/: controllers.rs  mod.rs  services.rs
src/modules/media/: controllers.rs  service.rs
src/modules/profile/: controllers.rs  mod.rs  service.rs
src/modules/setting/: controllers.rs  mod.rs
src/modules/setting/models/: setting.rs
src/modules/setting/services/: setting_service.rs
src/rbac/: mod.rs  registry.rs
src/security/: csrf.rs  headers.rs  mod.rs  rate_limit.rs
tests/: access_role_perm.rs  access_user.rs  admin_pages.rs  auth_security.rs  db_schema.rs  landing_auth.rs  layout_smoke.rs  media.rs
(+23 files in other folders)
