[package]
name = "rust_admin"
version = "0.1.0"
edition = "2021"
description = "RustAdmin — bootstrap admin panel (Rust + Rocket), port of NodeAdmin"
default-run = "rust_admin"

# Main web/api binary
[[bin]]
name = "rust_admin"
path = "src/main.rs"

[dependencies]
# Web framework + templating
rocket = { version = "0.5.1", features = ["json", "secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config / env
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# Async runtime helpers (Rocket re-exports tokio, but we use it directly in places)
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }

# Logging
tracing = "0.1"

[dev-dependencies]
